Started working on FAQ Section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="why-us">
       <header class="why-us__header">
-        <h1 class="why-us__heading">Dlaczego warto wybrać terminal od nas?</h1>
+        <h1 class="heading">Dlaczego warto wybrać terminal od nas?</h1>
         <p class="why-us__subheading">
           Program dla <span>nowych</span> klientów
         </p>
@@ -76,12 +76,17 @@
         <span>Pobierz regulamin</span>
       </button>
     </section>
-    <!-- <section class="faq">
-      <h2 class="faq__heading">Najczęściej zadawane pytania</h2>
-      <div class="faq__box">
+    <section class="faq">
+      <div class="faq__container">
+        <h2 class="heading">Najczęściej zadawane pytania</h2>
         <ul class="faq__questions">
           <li class="faq__item">
-            <button class="faq__open"></button>
+            <button class="faq__open">
+              <span class="faq__open--icon">+</span>
+              <span class="faq__open--text"
+                >O co chodzi z Programem Polska Bezgotówkowa</span
+              >
+            </button>
             <div class="faq__content">
               <p class="faq__text">
                 Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
@@ -99,7 +104,12 @@
             </div>
           </li>
           <li class="faq__item">
-            <button class="faq__open"></button>
+            <button class="faq__open">
+              <span class="faq__open--icon">+</span
+              ><span class="faq__open--text"
+                >Kto może odebrać terminal za darmo?</span
+              >
+            </button>
             <div class="faq__content">
               <p class="faq__text">
                 Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
@@ -117,7 +127,10 @@
             </div>
           </li>
           <li class="faq__item">
-            <button class="faq__open"></button>
+            <button class="faq__open">
+              <span class="faq__open--icon">+</span
+              ><span class="faq__open--text">Na ile zawierana jest umowa?</span>
+            </button>
             <div class="faq__content">
               <p class="faq__text">
                 Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
@@ -135,7 +148,12 @@
             </div>
           </li>
           <li class="faq__item">
-            <button class="faq__open"></button>
+            <button class="faq__open">
+              <span class="faq__open--icon">+</span>
+              <span class="faq__open--text"
+                >Ile terminali mogę odebrać w Programie?</span
+              >
+            </button>
             <div class="faq__content">
               <p class="faq__text">
                 Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
@@ -153,7 +171,12 @@
             </div>
           </li>
           <li class="faq__item">
-            <button class="faq__open"></button>
+            <button class="faq__open">
+              <span class="faq__open--icon">+</span>
+              <span class="faq__open--text"
+                >Ile terminali mogę odebrać w Programie?
+              </span>
+            </button>
             <div class="faq__content">
               <p class="faq__text">
                 Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
@@ -171,7 +194,12 @@
             </div>
           </li>
           <li class="faq__item">
-            <button class="faq__open"></button>
+            <button class="faq__open">
+              <span class="faq__open--icon">+</span>
+              <span class="faq__open--text"
+                >A co, jeśli w mojej firmie był już terminal?</span
+              >
+            </button>
             <div class="faq__content">
               <p class="faq__text">
                 Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
@@ -189,8 +217,13 @@
             </div>
           </li>
         </ul>
-        <img class="faq__cover" src="" alt="" />
+        <img
+          class="faq__cover"
+          src="./img/woman.png"
+          alt="Womak at work pointing at the freuquently asked questions box"
+        />
       </div>
-    </section> -->
+    </section>
+    <footer class="footer" />
   </body>
 </html>
