Finished Accordion Logic && Responsiveness

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./output.css" />
+    <script type="text/javascript" src="./script.js" defer></script>
     <title>Terminal Project</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
       <ul class="why-us__features">
         <li class="why-us__item">
           <div class="why-us__icon">
-            <img src="./svg/3.svg" alt="" />
+            <img src="./svg/feature-1.svg" alt="Feature 1 Icon" />
           </div>
           <h3 class="why-us__item-heading">
             <span>0 zł za urządzenie przez rok</span>
@@ -31,7 +32,7 @@
         </li>
         <li class="why-us__item">
           <div class="why-us__icon">
-            <img src="./svg/2.svg" alt="" />
+            <img src="./svg/feature-2.svg" alt="Feature 2 Icon" />
           </div>
           <h3 class="why-us__item-heading">
             <span>0 zł prowizji od transakcji</span>
@@ -45,7 +46,7 @@
         </li>
         <li class="why-us__item">
           <div class="why-us__icon">
-            <img src="./svg/1.svg" alt="" />
+            <img src="./svg/feature-3.svg" alt="Feature 3 Icon" />
           </div>
           <h3 class="why-us__item-heading">
             <span> Umowa na 12 miesięcy bez zobowiązań</span>
@@ -59,7 +60,7 @@
         </li>
         <li class="why-us__item">
           <div class="why-us__icon">
-            <img src="./svg/4.svg" alt="" />
+            <img src="./svg/feature-4.svg" alt="Feature 4 Icon" />
           </div>
           <h3 class="why-us__item-heading">
             <span>Dodatkowa premia 100 zł</span>
@@ -82,138 +83,150 @@
         <ul class="faq__questions">
           <li class="faq__item">
             <button class="faq__open">
-              <span class="faq__open--icon">+</span>
+              <div class="faq__open--icon faq__open--plus"></div>
               <span class="faq__open--text"
-                >O co chodzi z Programem Polska Bezgotówkowa</span
+                >O co chodzi z Programem Polska Bezgotówkowa?</span
               >
             </button>
             <div class="faq__content">
-              <p class="faq__text">
-                Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
-                Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
-                sektora usług płatniczych – Związku Banków Polskich,
-                Ministerstwa Przedsiębiorczości i Technologii, agentów
-                rozliczeniowych oraz organizacji płatniczych Mastercard i Visa.
-                Ideą Programu jest umożliwienie każdemu przedsiębiorcy
-                bezkoszowego i bezproblemowego wejścia na rynek akceptacji
-                płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
-                Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
-                terminali POS bez abonamentu i prowizji, przez okres 12
-                miesięcy.
-              </p>
+              <div class="faq__box">
+                <p class="faq__text">
+                  Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
+                  Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
+                  sektora usług płatniczych – Związku Banków Polskich,
+                  Ministerstwa Przedsiębiorczości i Technologii, agentów
+                  rozliczeniowych oraz organizacji płatniczych Mastercard i
+                  Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                  bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                  płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
+                  Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
+                  terminali POS bez abonamentu i prowizji, przez okres 12
+                  miesięcy.
+                </p>
+              </div>
             </div>
           </li>
           <li class="faq__item">
             <button class="faq__open">
-              <span class="faq__open--icon">+</span
-              ><span class="faq__open--text"
+              <div class="faq__open--icon faq__open--plus"></div>
+              <span class="faq__open--text"
                 >Kto może odebrać terminal za darmo?</span
               >
             </button>
             <div class="faq__content">
-              <p class="faq__text">
-                Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
-                Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
-                sektora usług płatniczych – Związku Banków Polskich,
-                Ministerstwa Przedsiębiorczości i Technologii, agentów
-                rozliczeniowych oraz organizacji płatniczych Mastercard i Visa.
-                Ideą Programu jest umożliwienie każdemu przedsiębiorcy
-                bezkoszowego i bezproblemowego wejścia na rynek akceptacji
-                płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
-                Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
-                terminali POS bez abonamentu i prowizji, przez okres 12
-                miesięcy.
-              </p>
+              <div class="faq__box">
+                <p class="faq__text">
+                  Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
+                  Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
+                  sektora usług płatniczych – Związku Banków Polskich,
+                  Ministerstwa Przedsiębiorczości i Technologii, agentów
+                  rozliczeniowych oraz organizacji płatniczych Mastercard i
+                  Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                  bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                  płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
+                  Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
+                  terminali POS bez abonamentu i prowizji, przez okres 12
+                  miesięcy.
+                </p>
+              </div>
             </div>
           </li>
           <li class="faq__item">
             <button class="faq__open">
-              <span class="faq__open--icon">+</span
-              ><span class="faq__open--text">Na ile zawierana jest umowa?</span>
+              <div class="faq__open--icon faq__open--plus"></div>
+              <span class="faq__open--text">Na ile zawierana jest umowa?</span>
             </button>
             <div class="faq__content">
-              <p class="faq__text">
-                Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
-                Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
-                sektora usług płatniczych – Związku Banków Polskich,
-                Ministerstwa Przedsiębiorczości i Technologii, agentów
-                rozliczeniowych oraz organizacji płatniczych Mastercard i Visa.
-                Ideą Programu jest umożliwienie każdemu przedsiębiorcy
-                bezkoszowego i bezproblemowego wejścia na rynek akceptacji
-                płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
-                Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
-                terminali POS bez abonamentu i prowizji, przez okres 12
-                miesięcy.
-              </p>
+              <div class="faq__box">
+                <p class="faq__text">
+                  Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
+                  Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
+                  sektora usług płatniczych – Związku Banków Polskich,
+                  Ministerstwa Przedsiębiorczości i Technologii, agentów
+                  rozliczeniowych oraz organizacji płatniczych Mastercard i
+                  Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                  bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                  płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
+                  Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
+                  terminali POS bez abonamentu i prowizji, przez okres 12
+                  miesięcy.
+                </p>
+              </div>
             </div>
           </li>
           <li class="faq__item">
             <button class="faq__open">
-              <span class="faq__open--icon">+</span>
+              <div class="faq__open--icon faq__open--plus"></div>
               <span class="faq__open--text"
                 >Ile terminali mogę odebrać w Programie?</span
               >
             </button>
             <div class="faq__content">
-              <p class="faq__text">
-                Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
-                Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
-                sektora usług płatniczych – Związku Banków Polskich,
-                Ministerstwa Przedsiębiorczości i Technologii, agentów
-                rozliczeniowych oraz organizacji płatniczych Mastercard i Visa.
-                Ideą Programu jest umożliwienie każdemu przedsiębiorcy
-                bezkoszowego i bezproblemowego wejścia na rynek akceptacji
-                płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
-                Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
-                terminali POS bez abonamentu i prowizji, przez okres 12
-                miesięcy.
-              </p>
+              <div class="faq__box">
+                <p class="faq__text">
+                  Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
+                  Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
+                  sektora usług płatniczych – Związku Banków Polskich,
+                  Ministerstwa Przedsiębiorczości i Technologii, agentów
+                  rozliczeniowych oraz organizacji płatniczych Mastercard i
+                  Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                  bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                  płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
+                  Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
+                  terminali POS bez abonamentu i prowizji, przez okres 12
+                  miesięcy.
+                </p>
+              </div>
             </div>
           </li>
           <li class="faq__item">
             <button class="faq__open">
-              <span class="faq__open--icon">+</span>
+              <div class="faq__open--icon faq__open--plus"></div>
               <span class="faq__open--text"
                 >Ile terminali mogę odebrać w Programie?
               </span>
             </button>
             <div class="faq__content">
-              <p class="faq__text">
-                Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
-                Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
-                sektora usług płatniczych – Związku Banków Polskich,
-                Ministerstwa Przedsiębiorczości i Technologii, agentów
-                rozliczeniowych oraz organizacji płatniczych Mastercard i Visa.
-                Ideą Programu jest umożliwienie każdemu przedsiębiorcy
-                bezkoszowego i bezproblemowego wejścia na rynek akceptacji
-                płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
-                Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
-                terminali POS bez abonamentu i prowizji, przez okres 12
-                miesięcy.
-              </p>
+              <div class="faq__box">
+                <p class="faq__text">
+                  Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
+                  Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
+                  sektora usług płatniczych – Związku Banków Polskich,
+                  Ministerstwa Przedsiębiorczości i Technologii, agentów
+                  rozliczeniowych oraz organizacji płatniczych Mastercard i
+                  Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                  bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                  płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
+                  Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
+                  terminali POS bez abonamentu i prowizji, przez okres 12
+                  miesięcy.
+                </p>
+              </div>
             </div>
           </li>
           <li class="faq__item">
             <button class="faq__open">
-              <span class="faq__open--icon">+</span>
+              <div class="faq__open--icon faq__open--plus"></div>
               <span class="faq__open--text"
                 >A co, jeśli w mojej firmie był już terminal?</span
               >
             </button>
             <div class="faq__content">
-              <p class="faq__text">
-                Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
-                Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
-                sektora usług płatniczych – Związku Banków Polskich,
-                Ministerstwa Przedsiębiorczości i Technologii, agentów
-                rozliczeniowych oraz organizacji płatniczych Mastercard i Visa.
-                Ideą Programu jest umożliwienie każdemu przedsiębiorcy
-                bezkoszowego i bezproblemowego wejścia na rynek akceptacji
-                płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
-                Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
-                terminali POS bez abonamentu i prowizji, przez okres 12
-                miesięcy.
-              </p>
+              <div class="faq__box">
+                <p class="faq__text">
+                  Polska Bezgotówkowa to potoczna nazwa Programu Wsparcia Obrotu
+                  Bezgotówkowego Polska Bezgotówkowa. Jest to wspólny projekt
+                  sektora usług płatniczych – Związku Banków Polskich,
+                  Ministerstwa Przedsiębiorczości i Technologii, agentów
+                  rozliczeniowych oraz organizacji płatniczych Mastercard i
+                  Visa. Ideą Programu jest umożliwienie każdemu przedsiębiorcy
+                  bezkoszowego i bezproblemowego wejścia na rynek akceptacji
+                  płatności bezgotówkowych. Dzięki wsparciu gwarantowanemu przez
+                  Program Polska Bezgotówkowa, przedsiębiorca może odebrać do 3
+                  terminali POS bez abonamentu i prowizji, przez okres 12
+                  miesięcy.
+                </p>
+              </div>
             </div>
           </li>
         </ul>
