Sorted Sass Styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Terminal Project</title>
   </head>
   <body>
+    <!-- Why Us Section -->
+
     <section class="why-us">
       <header class="why-us__header">
         <h1 class="heading">Dlaczego warto wybrać terminal od nas?</h1>
@@ -77,6 +79,11 @@
         <span>Pobierz regulamin</span>
       </button>
     </section>
+
+    <!----------------->
+
+    <!-- FAQ Section -->
+
     <section class="faq">
       <div class="faq__container">
         <h2 class="heading">Najczęściej zadawane pytania</h2>
@@ -233,10 +240,15 @@
         <img
           class="faq__cover"
           src="./img/woman.png"
-          alt="Womak at work pointing at the freuquently asked questions box"
+          alt="Woman at work pointing at the freuquently asked questions box"
         />
       </div>
     </section>
+
+    <!----------------->
+
+    <!---- Footer ----->
+
     <footer class="footer" />
   </body>
 </html>
